# DNSTunnelGuard

./: .gitignore  README.md
bert/: README.md  drive_link.txt  main.py  main_log.txt  model.py  pyproject.toml  requirements.txt  running_bert.md
control_cli/: guardrequests.py  main.py
control_plane/: .dockerignore  README.md  blocked.csv  config.ini  controlserver.py  controlserverAPI.md  dnsanalyzers.py  guardconfig.py  guardcontroller.py  main.py  mlanalyzer.py  pyproject.toml  recordreceiver.py  requirements.txt  runtime_config.ini
control_plane/config/: config.ini  runtime_config.ini
control_plane/scripts/: compile_libguard.sh
control_plane/src/: controlserver.py  dnsanalyzers.py  firewall.py  guardconfig.py  guardcontroller.py  main.py  mlanalyzer.py  recordreceiver.py  trafficanalyzer.py
control_plane/src/bpf/: libguard.c
control_plane/tests/: test_traffic_analyzer.py
data_plane/: README.md  egress_guard.c  guards.h  ingress_guard.c
data_plane/scripts/: install.sh  remove_guards.sh
perf/: afterperf_100.txt  beforeperf_100.txt  gen_dnsperf_input.py  perftest.txt
perf/after_guard/: perf_after_guard.txt  perf_after_guard2.txt  perf_after_guard3.txt
perf/before_guard/: perf_before2_guard.txt  perf_before3_guard.txt  perf_before_guard.txt
scripts/: install.sh  run.sh  update_guards.sh
