[project]
name = "bert"
version = "0.1.0"
description = "ML Domain Name Analyzer API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=2.14.0",
    "flask>=3.1.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
]
